@@ -1,3 +1,9 @@
+2012-03-13 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* support/regression/tests/gcc-torture-execute-20010224-1.c,
+	  support/regression/tests/gcc-torture-execute-20030714-1.c:
+	  Disable tests for gcc older than 5.0.
+
 2012-03-13 Borut Razem <borut.razem AT gmail.com>
 
 	* device/include/*, device/lib/*: corrected GPL license version
